tea grid padding remove

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- unique test tea  -->
         <section>
             <div class="d-flex flex-column flex-md-row  align-items-center" style="gap: 30px;">
-                <div class="d-flex p-4 w-100" style="gap: 18px;">
+                <div class="d-flex w-100" style="gap: 18px;">
                     <div>
                         <div class="flex-grid-1a mb-4 rounded-3"></div>
                         <div class="flex-grid-2a p-4 rounded-3"><img src="./images/fresh-2.png" alt=""></div>
