add super clients section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         <section class="text-center">
             <div class="mb-5">
                 <h1 class="fw-bold">Our Featured Products</h1>
-                <p class="h6 lh-base text-muted w-100">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable.
+                <p class="h6 lh-base text-muted w-100">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form, <br> by injected humour, or randomised words
+                    which don't look even slightly believable.
                 </p>
             </div>
             <div class="row row-cols-1 row-cols-md-4 gy-4">
@@ -97,11 +99,57 @@
                 </div>
                 <div class="p-md-5 p-4">
                     <h1 class="fw-bold mb-3">Great Tea, Freshly <br> Presented</h1>
-                    <p class="text-tea-dark h6 mb-3 pe-md-5">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <p class="text-tea-dark h6 mb-3 pe-md-5">The meaning of gong cha is chanese is to provide the best
+                        tea to emperor from all possessions . It represents the highest quality and self expectation.
+                        Establishing in 2006, Gong cha had been deeply appreciated by its custoers because of good words
+                        of mouth and unique customized service orginated from Taiwan.</p>
                     <h4 class="fw-bold">Unique Taste</h4>
-                    <p class="text-tea-dark h6 mb-4">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <p class="text-tea-dark h6 mb-4">A Unique and different style from other teapots gives a luxurious
+                        and minimalist impression</p>
                     <h4 class="fw-bold">Premium Quality</h4>
-                    <p class="text-tea-dark h6">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                    <p class="text-tea-dark h6">Premium Quality that makes tea more elegant and more durable when you
+                        use it.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- meet our super clients  -->
+        <section class="super-gradient p-5">
+            <div class="d-flex flex-column-reverse flex-md-row" style="gap: 70px;">
+                <div class="text-white w-100">
+                    <h1 class="fw-bold">Meet Our Super Clients</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. </p>
+                    <button class="btn-show fw-bold rounded-3">Show All</button>
+                </div>
+                <div class="position-relative w-100">
+                    <div class="opacity-25">
+                        <div class="bg-white position-relative mb-5">
+                            <div class="p-4">
+                                <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                                <p class="fw-bold">Ilham Yuda</p>
+                                <p class="text-secondary">Businessman</p>
+                            </div>
+                            <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;" alt="">
+                        </div>
+                        <div class="bg-white position-relative">
+                            <div class="p-4">
+                                <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                                <p class="fw-bold">Ilham Yuda</p>
+                                <p class="text-secondary">Businessman</p>
+                            </div>
+                            <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;" alt="">
+                        </div>
+                    </div>
+                    <div class="bg-white position-relative position-absolute w-75" style="left: -20px; top: 100px;">
+                        <div class="p-4">
+                            <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                            <p class="fw-bold">Ilham Yuda</p>
+                            <p class="text-secondary">Businessman</p>
+                        </div>
+                        <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;" alt="">
+                    </div>
                 </div>
             </div>
         </section>
