--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                 <div class="d-flex w-100" style="gap: 18px;">
                     <div>
                         <div class="flex-grid-1a mb-4 rounded-3"></div>
-                        <div class="flex-grid-2a p-4 rounded-3"><img src="./images/fresh-2.png" alt=""></div>
+                        <div class="flex-grid-2a p-4 rounded-3"><img src="./images/fresh-2.png" class="img-fluid" alt=""></div>
                     </div>
                     <div>
-                        <div class="flex-grid-1b mb-4 p-4 rounded-3"><img src="./images/fresh-1.png" alt=""></div>
+                        <div class="flex-grid-1b mb-4 p-4 rounded-3"><img src="./images/fresh-1.png" class="img-fluid" alt=""></div>
                         <div class="flex-grid-2b rounded-3"></div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                             <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;" alt="">
                         </div>
                     </div>
-                    <div class="bg-white position-relative position-absolute w-75" style="left: -20px; top: 100px;">
+                    <div class="bg-white position-relative position-absolute w-100" style="left: -20px; top: 100px;">
                         <div class="p-4">
                             <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                             <p class="fw-bold">Ilham Yuda</p>
