--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="https://kit.fontawesome.com/89f0dd1ca3.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="container-lg">
-    <header class="p-2">
+<body>
+    <header class="p-2 container-lg">
         <div class="d-flex flex-md-row flex-column-reverse justify-content-between pt-md-5">
             <div class="pt-md-5">
                 <h1 class="fw-bolder display-2">It's good <br> tea time at The Tea House</h1>
@@ -35,7 +35,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="container-lg">
         <section class="text-center">
             <div class="mb-5">
                 <h1 class="fw-bold">Our Featured Products</h1>
@@ -90,10 +90,12 @@
                 <div class="d-flex w-100" style="gap: 18px;">
                     <div>
                         <div class="flex-grid-1a mb-4 rounded-3"></div>
-                        <div class="flex-grid-2a p-4 rounded-3"><img src="./images/fresh-2.png" class="img-fluid" alt=""></div>
+                        <div class="flex-grid-2a p-4 rounded-3"><img src="./images/fresh-2.png" class="img-fluid"
+                                alt=""></div>
                     </div>
                     <div>
-                        <div class="flex-grid-1b mb-4 p-4 rounded-3"><img src="./images/fresh-1.png" class="img-fluid" alt=""></div>
+                        <div class="flex-grid-1b mb-4 p-4 rounded-3"><img src="./images/fresh-1.png" class="img-fluid"
+                                alt=""></div>
                         <div class="flex-grid-2b rounded-3"></div>
                     </div>
                 </div>
@@ -114,7 +116,7 @@
         </section>
 
         <!-- meet our super clients  -->
-        <section class="super-gradient p-5">
+        <section class="super-gradient p-5 rounded-3">
             <div class="d-flex flex-column-reverse flex-md-row" style="gap: 70px;">
                 <div class="text-white w-100">
                     <h1 class="fw-bold">Meet Our Super Clients</h1>
@@ -127,33 +129,126 @@
                     <div class="opacity-25">
                         <div class="bg-white position-relative mb-5">
                             <div class="p-4">
-                                <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                                <p class="text-secondary">We are providing the best and suitable home insurance services
+                                    for the people who are interested to treatment</p>
                                 <p class="fw-bold">Ilham Yuda</p>
                                 <p class="text-secondary">Businessman</p>
                             </div>
-                            <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;" alt="">
+                            <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;"
+                                alt="">
                         </div>
                         <div class="bg-white position-relative">
                             <div class="p-4">
-                                <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                                <p class="text-secondary">We are providing the best and suitable home insurance services
+                                    for the people who are interested to treatment</p>
                                 <p class="fw-bold">Ilham Yuda</p>
                                 <p class="text-secondary">Businessman</p>
                             </div>
-                            <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;" alt="">
+                            <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;"
+                                alt="">
                         </div>
                     </div>
                     <div class="bg-white position-relative position-absolute w-100" style="left: -20px; top: 100px;">
                         <div class="p-4">
-                            <p class="text-secondary">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                            <p class="text-secondary">We are providing the best and suitable home insurance services for
+                                the people who are interested to treatment</p>
                             <p class="fw-bold">Ilham Yuda</p>
                             <p class="text-secondary">Businessman</p>
                         </div>
-                        <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;" alt="">
+                        <img src="./images/client.png" class="position-absolute" style="top: -20px; left: -20px;"
+                            alt="">
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- news and events -->
+        <section>
+            <div class="text-center">
+                <h1 class="fw-bold"> News & Events </h1>
+                <p class="text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,<br> by injected humour,  or randomised words which don't look even slightly believable.
+                </p>
+            </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card p-4">
+                        <img src="./images/news-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="text-secondary">23 Jan, 2023</p>
+                            <h5 class="card-title fw-bold">Collecting 8 points for discount</h5>
+                            <p class="card-text text-secondary">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h6>Learn More</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-4">
+                        <img src="./images/news-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="text-secondary">23 Jan, 2023</p>
+                            <h5 class="card-title fw-bold">Collecting 8 points for discount</h5>
+                            <p class="card-text text-secondary">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h6>Learn More</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-4">
+                        <img src="./images/news-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="text-secondary">23 Jan, 2023</p>
+                            <h5 class="card-title fw-bold">Collecting 8 points for discount</h5>
+                            <p class="card-text text-secondary">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h6>Learn More</h6>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
     </main>
+    <footer class="bg-danger-subtle container-fluid">
+        <div>
+            <div class="d-flex flex-column flex-md-row justify-content-between p-5">
+                <img src="./images/cup.png" style="width: 50px;" alt="">
+                <div class="my-3">
+                    <p class="text-muted d-inline me-3">Ready to get started?</p>
+                    <button class="explore text-white p-2 ">Get Started</button>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="row row-cols-2 row-cols-md-4 justify-content-between p-4">
+                <div class="col">
+                    <h6>Quick Links</h6>
+                    <p class="text-secondary">Home</p>
+                    <p class="text-secondary">About Us</p>
+                    <p class="text-secondary">Insurance</p>
+                    <p class="text-secondary">Privacy Policy</p>
+                </div>
+                <div class="col">
+                    <h6>Our Services</h6>
+                    <p class="text-secondary">Life Insurance</p>
+                    <p class="text-secondary">Car insurance</p>
+                    <p class="text-secondary">Health Insurance</p>
+                    <p class="text-secondary">House Insurance</p>
+                </div>
+                <div class="col">
+                    <h6>Help</h6>
+                    <p class="text-secondary">FAQs</p>
+                    <p class="text-secondary">Contact Us</p>
+                </div>
+                <div class="col">
+                    <h6>Subscribe to our newsletter</h6>
+                    <div>
+                        <input type="email" name="" placeholder="Email address" class="border-0 bg-danger-subtle border-bottom border-dark border-1 form-control shadow-none rounded-0" id="">
+                        <i class="fa-solid fa-arrow explore"></i>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- javascript file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
