--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
         </section>
     </main>
-    <footer class="bg-danger-subtle container-fluid">
+    <footer class="bg-danger-subtle container-fluid p-4">
         <div>
             <div class="d-flex flex-column flex-md-row justify-content-between p-5">
                 <img src="./images/cup.png" style="width: 50px;" alt="">
@@ -220,33 +220,38 @@
         <div>
             <div class="row row-cols-2 row-cols-md-4 justify-content-between p-4">
                 <div class="col">
-                    <h6>Quick Links</h6>
+                    <h6 class="fw-bold">Quick Links</h6>
                     <p class="text-secondary">Home</p>
                     <p class="text-secondary">About Us</p>
                     <p class="text-secondary">Insurance</p>
                     <p class="text-secondary">Privacy Policy</p>
                 </div>
                 <div class="col">
-                    <h6>Our Services</h6>
+                    <h6 class="fw-bold">Our Services</h6>
                     <p class="text-secondary">Life Insurance</p>
                     <p class="text-secondary">Car insurance</p>
                     <p class="text-secondary">Health Insurance</p>
                     <p class="text-secondary">House Insurance</p>
                 </div>
                 <div class="col">
-                    <h6>Help</h6>
+                    <h6 class="fw-bold">Help</h6>
                     <p class="text-secondary">FAQs</p>
                     <p class="text-secondary">Contact Us</p>
                 </div>
                 <div class="col">
-                    <h6>Subscribe to our newsletter</h6>
+                    <h6 class="fw-bold">Subscribe to our newsletter</h6>
                     <div>
-                        <input type="email" name="" placeholder="Email address" class="border-0 bg-danger-subtle border-bottom border-dark border-1 form-control shadow-none rounded-0" id="">
-                        <i class="fa-solid fa-arrow explore"></i>
+                        <input type="email" name="" placeholder="Email address" class="ps-0 border-0 bg-danger-subtle border-bottom border-dark border-1 form-control shadow-none rounded-0 w-75 d-inline" id="">
+                        <i class="fa-solid fa-arrow-right explore text-white p-2"></i>
                     </div>
-
+                    <div class="my-3">
+                        <i class="fa-brands fa-facebook me-3"></i>
+                        <i class="fa-brands fa-twitter me-3"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
                 </div>
             </div>
+            <p class="text-secondary text-center">© Md Muhaiminul - All rights reserved.</p>
         </div>
     </footer>
     <!-- javascript file -->
