--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
         </div>
         <div>
-            <div class="row row-cols-2 row-cols-md-4 justify-content-between p-4">
+            <div class="row row-cols-2 row-cols-md-4 justify-content-between p-4 gy-4">
                 <div class="col">
                     <h6 class="fw-bold">Quick Links</h6>
                     <p class="text-secondary">Home</p>
